# forestsim

./: .gitignore  AGENTS.md  APP_NETWORK_MAP.md  README.md  WATT_FOREST_ENGINE_SPEC.md  pyproject.toml
.codex/environments/: environment.toml
data/species/: eastern_us_pfts.json  fia_species_to_pft.csv
docs/: calibration_targets.md  odd_protocol.md  research_backed_model_todos.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vitest.config.ts
frontend/src/: App.tsx  api.ts  domain.ts  mockApi.ts  styles.css  types.ts  useScenarioModel.ts  vite-env.d.ts
frontend/tests/: app.integration.test.tsx  chartsPanel.test.tsx  forestPrototype.sim.test.ts  mockApi.test.ts  setup.tsx
notebooks/: 00_quickstart.ipynb  01_single_cell_test.ipynb  02_synthetic_landscape.ipynb  03_fire_scenarios.ipynb  04_real_data_init.ipynb  05_calibration.ipynb  06_scenario_comparison.ipynb
src/wattforest/: __init__.py  calibration.py  climate.py  config.py  engine.py  events.py  initializer.py  metrics.py  phase3.py  phase4.py  rng.py  soils.py  species.py  state.py  terrain.py  tuning.py  validation.py  web_backend.py
tests/: test_determinism.py  test_event_replay.py  test_fire_spread.py  test_growth.py  test_metrics.py  test_phase0.py  test_phase2_disturbances.py  test_phase3_cli.py  test_phase3_initialization.py  test_phase3_validation.py  test_phase4_calibration.py  test_phase4_cli.py  test_phase4_metrics.py  test_phase5_backend.py  test_phase5_export.py  test_spec_completion_core.py  test_structure_consistency.py  test_synthetic_demo_package.py
(+68 files in other folders)
